# HiP4-UPF

./: BUILDING.md  LICENSE  README.md
baseline_upf/: build.sh  gs-result.txt  headers.p4  search_table_size.py  search_table_size_ratio.py  settings.p4  settings_template.p4  upf.p4
controller/north_controller/demo/mock-smf-comprehensive/: Cargo.toml  create_if.sh
controller/north_controller/demo/mock-smf-comprehensive/src/: main_handover_latency.rs  main_handover_throughput.rs  main_reg_dereg_throughput.rs  sender.rs
controller/north_controller/demo/mock-smf-comprehensive/src/n4/: handlers.rs  message_builders.rs  message_helpers.rs  mod.rs
controller/north_controller/src/libs/libpfcp/: Cargo.toml
controller/north_controller/src/libs/libpfcp/src/: handlers.rs  helpers.rs  lib.rs  messages.rs  models.rs  senders.rs
controller/north_controller/src/libs/libsbimodels/: Cargo.toml
controller/north_controller/src/nf/upf/: .dockerignore  Cargo.toml  Dockerfile  p4.json  tofino-non-p4.json  tofino-p4.json  upf-config-local.yaml  upf-config-netberg-710.yaml  upf-config.yaml
controller/north_controller/src/nf/upf/p4/: nat.p4info.txt  upf_v1model.p4  upf_v1model.p4info.txt
controller/north_controller/src/nf/upf/src/: dataplane_interface.rs  main.rs  routing.rs
controller/north_controller/src/nf/upf/src/datapath/: mod.rs
controller/north_controller/src/nf/upf/src/datapath/tofino/: action_tables.rs  mod.rs  (+13 more)
controller/north_controller/src/nf/upf/src/n4/: mod.rs  node_handlers.rs
controller/north_controller/src/nf/upf/utils/: gtp_gateway  internet_gateway  internet_gateway.c  send_gtp.c  startup.sh
controller/south_controller/: accounting_table_group.hpp  accounting_tables.cc  accounting_tables.hpp  batch_scheduler.cc  batch_scheduler.hpp  common.cc  common.hpp  domain_socket.hpp  gk.hpp  interface.hpp  pdr_tables.hpp  performance_tracker.hpp  pull_priority.hpp  pull_worker.cc  pull_worker.hpp  tscns.h  update_worker.cc  update_worker.hpp  upf.cc
controller/south_controller/models/: requests.fbs  requests_generated.h  response_generated.h
dataplane/: pdr.p4  search_table_size.py  search_table_size_ratio.py  settings.p4  settings_template.p4  upf.p4
reproduce/section 6.2/: README.md  upf.yaml  upfcfg.yaml
reproduce/section 6.2/single_thread/controller/north_controller/: Cargo.toml  build.rs  build.sh  config.yaml  non-p4.json
reproduce/section 6.2/single_thread/controller/north_controller/p4/: nat.json  nat.p4  p4info.pest  upf_v1model.json
reproduce/section 6.2/single_thread/controller/north_controller/proto/: bfruntime.proto  bfruntime_old.proto  p4runtime.proto
reproduce/section 6.2/single_thread/controller/north_controller/src/: context.rs  main.rs  packet_parser.rs  tscns.rs  utils.rs
reproduce/section 6.2/single_thread/controller/north_controller/src/datapath/: mod.rs
reproduce/section 6.2/single_thread/controller/north_controller/src/datapath/tofino/: action_tables.rs  bfruntime.rs  bfruntime_models.rs  common_tables.rs  difference_generator.rs  mod.rs  qos.rs  requests_generated.rs  upf_driver_interface.rs  usage_reporting.rs
reproduce/section 6.2/single_thread/controller/north_controller/src/datapath/tofino/table_templates/: do_nothing.rs  downlink_n6_complex.rs  downlink_n6_simple.rs  downlink_n9_simple.rs  mod.rs  uplink_n6_complex.rs  uplink_n6_simple.rs  uplink_n9_complex.rs  uplink_n9_simple.rs
reproduce/section 6.2/single_thread/controller/north_controller/src/ir/: mod.rs
reproduce/section 6.2/single_thread/controller/north_controller/src/n4/: session_handlers.rs
reproduce/section 6.2/single_thread/controller/north_controller/utils/: gtp_gateway  internet_gateway
reproduce/section 6.2/single_thread/controller/south_controller/: CMakeLists.txt  accounting_table_group.cc  accounting_table_group.hpp  accounting_tables.cc  accounting_tables.hpp  common.hpp  counter_sync.cc  counter_sync.hpp  domain_socket.hpp  interface.hpp  pdr_tables.hpp  perf_test.p4  pull_worker.cc  pull_worker.hpp  update_worker.cc  update_worker.hpp  upf.cc
reproduce/section 6.2/single_thread/controller/south_controller/models/: requests.fbs  requests_generated.h  requests_generated.rs  response.fbs  response_generated.rs
reproduce/section 6.2/single_thread/dataplane/upf_1table/: build.sh  headers.p4  search_table_size.py  settings.p4  upf.p4
reproduce/section 6.3/: README.md
reproduce/section 6.3/reporting-delay/: Cargo.toml  eval.py
reproduce/section 6.3/reporting-delay/src/: main.rs  sender.rs
reproduce/section 6.3/reporting-delay/src/n4/: handlers.rs  mod.rs
reproduce/use_this_upf/: pdr.p4  perf.txt  settings.p4  settings_template.p4  ues.txt  upf.p4
(+9 files in other folders)
