[package]
name = "reporting-delay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libpfcp = {path = "../../src/libs/libpfcp"}
lazy_static = { version = "1.4" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
env_logger = "0.7"
log = "0.4.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "*"
dashmap = "5"
clap = "3.0.0-beta.2"
nix = "0.26"
async-trait = "0.1"

[dependencies.pnet]
version = "0.29.0"
features = ["serde"]
