[package]
name = "libsbimodels"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

uuid = {version = "0.8", features = ["serde", "v4"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

swagger = "5.0.2"
serde_ignored = {version = "0.1.1", optional = true}

chrono = { version = "0.4", features = ["serde"] }