[package]
name = "upf"
version = "0.1.0"
authors = ["unknown"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-counter = "1"
rand = "*"
streaming-stats = "0.2"
flatbuffers = { path = "/home/zwen7/flatbuffers/rust/flatbuffers" }
once_cell = "1"
lazy_static = { version = "1.4" }
libpfcp = {path = "../../libs/libpfcp"}
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
etherparse = "0.10"
cidr = {version="0.2",features = ["serde"]}
async-stream = "0.3"
packet-builder = "0.5.0"
async-trait = "0.1"
pest = "2.1.3"
pest_derive = "2.1.0"
tonic = {git = "https://github.com/zyddnys/tonic.git"}
prost = "0.11"
prost-types = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1"
serde_yaml = "0.8.17"
clap = "3.0.0-beta.2"
local-ip-address = "0.4.4"
log = "0.4.0"
env_logger = "0.7"
signal-hook = "0.3.10"
chrono = "0.4.19"
derivative = "2.2.0"
mem_cmp = "0.1.4"
dashmap = "5"
linear-map = "1.2"
hex = "*"
itertools = "0.10"
reqwest = {version = "0.11", features = ["json"]}
thread-priority = "0.13"
core_affinity = "0.8"
chashmap = "2"

# other NFs
hyper = "0.14"
uuid = {version = "0.8", features = ["serde", "v4"]}
models = {package = "libsbimodels", path = "../../libs/libsbimodels"}

[build-dependencies]
tonic-build = "0.8"

[dependencies.pnet]
version = "0.29.0"
features = ["serde"]

[profile.release]
lto = true # Link Time Optimization (LTO)
panic = "abort"
codegen-units = 1

